Use java21 Math.clamp (tidy-up found by SonarQube)